Adding some config info to startGameServer.bat